<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:hint="0"
        android:textColor="@color/black"
        android:textSize="50sp"
        android:padding="10dp"
        android:gravity="end|bottom"
        android:id="@+id/tv_input"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/btn_section"
        android:elevation="10dp"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_weight="1">
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/_7"
                android:layout_weight="1"
                android:elevation="10dp"
                android:textSize="30sp"
                android:layout_margin="5dp"
                android:background="@drawable/btn_bg"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:onClick="onDigit"
                android:id="@+id/btn_seven"/>
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/_8"
                android:textSize="30sp"
                android:layout_margin="5dp"
                android:background="@drawable/btn_bg"
                android:layout_weight="1"
                android:elevation="10dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:onClick="onDigit"
                android:id="@+id/btn_eight"/>
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/_9"
                android:layout_margin="5dp"
                android:textSize="30sp"
                android:layout_weight="1"
                android:elevation="10dp"
                android:background="@drawable/btn_bg"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:onClick="onDigit"
                android:id="@+id/btn_nine"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_devide"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_bg"
                android:elevation="10dp"
                android:onClick="onOperator"
                android:text="@string/_devide"
                android:textColor="#F57C00"
                android:textSize="30sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/_4"
                android:layout_weight="1"
                android:textSize="30sp"
                android:elevation="10dp"
                android:layout_margin="5dp"
                android:background="@drawable/btn_bg"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:onClick="onDigit"
                android:id="@+id/btn_four"/>
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="30sp"
                android:text="@string/_5"
                android:layout_margin="5dp"
                android:background="@drawable/btn_bg"
                android:layout_weight="1"
                android:elevation="10dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:onClick="onDigit"
                android:id="@+id/btn_five"/>
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/_6"
                android:textSize="30sp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:elevation="10dp"
                android:background="@drawable/btn_bg"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:onClick="onDigit"
                android:id="@+id/btn_six"/>
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="30sp"
                android:text="@string/_mul"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:elevation="10dp"
                android:background="@drawable/btn_bg"
                android:textColor="#F57C00"
                android:textStyle="bold"
                android:onClick="onOperator"
                android:id="@+id/btn_mul"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/_1"
                android:textSize="30sp"
                android:layout_weight="1"
                android:elevation="10dp"
                android:layout_margin="5dp"
                android:background="@drawable/btn_bg"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:onClick="onDigit"
                android:id="@+id/btn_one"/>
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/_2"
                android:textSize="30sp"
                android:layout_margin="5dp"
                android:background="@drawable/btn_bg"
                android:layout_weight="1"
                android:elevation="10dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:onClick="onDigit"
                android:id="@+id/btn_two"/>
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/_3"
                android:textSize="30sp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:elevation="10dp"
                android:background="@drawable/btn_bg"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:onClick="onDigit"
                android:id="@+id/btn_three"/>
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/_min"
                android:textSize="30sp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:elevation="10dp"
                android:background="@drawable/btn_bg"
                android:textColor="#F57C00"
                android:textStyle="bold"
                android:onClick="onOperator"
                android:id="@+id/btn_min"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/_dot"
                android:textSize="30sp"
                android:layout_weight="1"
                android:elevation="10dp"
                android:layout_margin="5dp"
                android:background="@drawable/btn_bg"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:onClick="onDecimalPoint"
                android:id="@+id/btn_dot"/>
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/_0"
                android:textSize="30sp"
                android:layout_weight="1"
                android:elevation="10dp"
                android:layout_margin="5dp"
                android:background="@drawable/btn_bg"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:onClick="onDigit"
                android:id="@+id/btn_zero"/>
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/_clr"
                android:textSize="30sp"
                android:layout_margin="5dp"
                android:background="@drawable/btn_bg"
                android:layout_weight="1"
                android:elevation="10dp"
                android:textColor="#F57C00"
                android:textStyle="bold"
                android:onClick="onClear"
                android:id="@+id/btn_clr"/>
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/_plus"
                android:textSize="30sp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:elevation="10dp"
                android:background="@drawable/btn_bg"
                android:textColor="#F57C00"
                android:textStyle="bold"
                android:onClick="onOperator"
                android:id="@+id/btn_plus"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/_equal"
                android:textSize="30sp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:elevation="10dp"
                android:background="@drawable/btn_bg"
                android:textColor="#F57C00"
                android:textStyle="bold"
                android:onClick="onEqual"
                android:id="@+id/btn_equal"/>

        </LinearLayout>




    </LinearLayout>

</LinearLayout>